schemes/artic-sars-cov-2/400/v3.0.0/README.md
# artic-sars-cov-2 400bp v3.0.0

![Generic badge](https://img.shields.io/badge/STATUS-DEPRECATED-red.svg)

> If you use this scheme please cite: https://doi.org/10.1101%2F2020.09.04.283077

[primalscheme labs](https://labs.primalscheme.com/detail/artic-sars-cov-2/400/v3.0.0)

## Metadata

**Target Organisms:**
- sars-cov-2

**Derived from:** sars-cov-2/artic/400/v2.0.0

## Contributors

- ARTIC network

## Vendors

- IDT: 10011442
- Eurofins ([Website](https://eurofinsgenomics.com))

## Overviews

<div style="width: 100%;"><img src="work/primer.svg" style="width: 100%;" alt="Click to see the source"></div>

## Details

```json
{
    "schema_version": "1.0.0-alpha",
    "name": "artic-sars-cov-2",
    "amplicon_size": 400,
    "version": "v3.0.0",
    "contributors": [
        {
            "name": "ARTIC network"
        }
    ],
    "target_organisms": [
        {
            "common_name": "sars-cov-2"
        }
    ],
    "aliases": [
        "ARTIC/V4.0"
    ],
    "license": "CC-BY-SA-4.0",
    "status": "DEPRECATED",
    "derived_from": "sars-cov-2/artic/400/v2.0.0",
    "citations": [
        "https://doi.org/10.1101%2F2020.09.04.283077"
    ],
    "vendors": [
        {
            "organisation_name": "IDT",
            "kit_name": "10011442"
        },
        {
            "organisation_name": "Eurofins",
            "home_page": "https://eurofinsgenomics.com"
        }
    ],
    "primer_checksum": "primaschema:bed:080b85a49a2bc853",
    "primer_file_sha256": "sha256:99072afd2bdadda154f88b1fd2284525175648371fa1098c82ef67ff9b928f13",
    "reference_checksum": "primaschema:ref:21c16fc69acb3b9e",
    "reference_file_sha256": "sha256:b09a4a3d6824dc4a9f3a17d480f3335f73cb1507897f6dad0de871e8f00d8637"
}
```



------------------------------------------------------------------------

This work is licensed under a [Creative Commons Attribution-ShareAlike 4.0 International License](http://creativecommons.org/licenses/by-sa/4.0/)

![](https://i.creativecommons.org/l/by-sa/4.0/88x31.png)